// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should have a bounced state 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: #FFF;
  background-color: #0C6CF2;
  border: none;
  border-radius: 0.255rem;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  opacity: 1;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 600;
}

.c0:hover {
  background-color: #144699;
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

<Button
  bounced={true}
  disabled={false}
  e2e="defaultButton"
  type="button"
>
  <styled.button
    bounced={true}
    disabled={false}
    e2e="defaultButton"
    type="button"
  >
    <StyledComponent
      bounced={true}
      disabled={false}
      e2e="defaultButton"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [
            [Function],
          ],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: ",
              [Function],
              ";
  background-color: ",
              [Function],
              ";
  border: none;
  border-radius: ",
              [Function],
              ";
  cursor: ",
              [Function],
              ";
  outline: none;
  transition: all 0.3s ease 0s;
  opacity: ",
              [Function],
              ";
  font-family: ",
              [Function],
              ";
  font-size: ",
              [Function],
              ";
  font-weight: 600;

  &:hover {
    background-color: ",
              [Function],
              ";
    transform: ",
              [Function],
              ";
  }
",
            ],
          },
          "displayName": "styled.button",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="button"
    >
      <button
        className="c0"
        data-e2e="defaultButton"
        disabled={false}
        type="button"
      />
    </StyledComponent>
  </styled.button>
</Button>
`;

exports[`Button should have a disabled state 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: #FFF;
  background-color: #0C6CF2;
  border: none;
  border-radius: 0.255rem;
  cursor: not-allowed;
  outline: none;
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  opacity: 0.5;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 600;
}

.c0:hover {
  background-color: #0C6CF2;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<Button
  bounced={false}
  disabled={true}
  e2e="defaultButton"
  type="button"
>
  <styled.button
    bounced={false}
    disabled={true}
    e2e="defaultButton"
    type="button"
  >
    <StyledComponent
      bounced={false}
      disabled={true}
      e2e="defaultButton"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [
            [Function],
          ],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: ",
              [Function],
              ";
  background-color: ",
              [Function],
              ";
  border: none;
  border-radius: ",
              [Function],
              ";
  cursor: ",
              [Function],
              ";
  outline: none;
  transition: all 0.3s ease 0s;
  opacity: ",
              [Function],
              ";
  font-family: ",
              [Function],
              ";
  font-size: ",
              [Function],
              ";
  font-weight: 600;

  &:hover {
    background-color: ",
              [Function],
              ";
    transform: ",
              [Function],
              ";
  }
",
            ],
          },
          "displayName": "styled.button",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="button"
    >
      <button
        className="c0"
        data-e2e="defaultButton"
        disabled={true}
        type="button"
      />
    </StyledComponent>
  </styled.button>
</Button>
`;

exports[`Button should have a type property 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: #FFF;
  background-color: #0C6CF2;
  border: none;
  border-radius: 0.255rem;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  opacity: 1;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 600;
}

.c0:hover {
  background-color: #144699;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<Button
  bounced={false}
  disabled={false}
  e2e="defaultButton"
  type="submit"
>
  <styled.button
    bounced={false}
    disabled={false}
    e2e="defaultButton"
    type="submit"
  >
    <StyledComponent
      bounced={false}
      disabled={false}
      e2e="defaultButton"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [
            [Function],
          ],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: ",
              [Function],
              ";
  background-color: ",
              [Function],
              ";
  border: none;
  border-radius: ",
              [Function],
              ";
  cursor: ",
              [Function],
              ";
  outline: none;
  transition: all 0.3s ease 0s;
  opacity: ",
              [Function],
              ";
  font-family: ",
              [Function],
              ";
  font-size: ",
              [Function],
              ";
  font-weight: 600;

  &:hover {
    background-color: ",
              [Function],
              ";
    transform: ",
              [Function],
              ";
  }
",
            ],
          },
          "displayName": "styled.button",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="submit"
    >
      <button
        className="c0"
        data-e2e="defaultButton"
        disabled={false}
        type="submit"
      />
    </StyledComponent>
  </styled.button>
</Button>
`;

exports[`Button should have a type property 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: #FFF;
  background-color: #0C6CF2;
  border: none;
  border-radius: 0.255rem;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  opacity: 1;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 600;
}

.c0:hover {
  background-color: #144699;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<Button
  bounced={false}
  disabled={false}
  e2e="defaultButton"
  type="reset"
>
  <styled.button
    bounced={false}
    disabled={false}
    e2e="defaultButton"
    type="reset"
  >
    <StyledComponent
      bounced={false}
      disabled={false}
      e2e="defaultButton"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [
            [Function],
          ],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: ",
              [Function],
              ";
  background-color: ",
              [Function],
              ";
  border: none;
  border-radius: ",
              [Function],
              ";
  cursor: ",
              [Function],
              ";
  outline: none;
  transition: all 0.3s ease 0s;
  opacity: ",
              [Function],
              ";
  font-family: ",
              [Function],
              ";
  font-size: ",
              [Function],
              ";
  font-weight: 600;

  &:hover {
    background-color: ",
              [Function],
              ";
    transform: ",
              [Function],
              ";
  }
",
            ],
          },
          "displayName": "styled.button",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="reset"
    >
      <button
        className="c0"
        data-e2e="defaultButton"
        disabled={false}
        type="reset"
      />
    </StyledComponent>
  </styled.button>
</Button>
`;

exports[`Button should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: #FFF;
  background-color: #0C6CF2;
  border: none;
  border-radius: 0.255rem;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  opacity: 1;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 600;
}

.c0:hover {
  background-color: #144699;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<Button
  bounced={false}
  disabled={false}
  e2e="defaultButton"
  type="button"
>
  <styled.button
    bounced={false}
    disabled={false}
    e2e="defaultButton"
    type="button"
  >
    <StyledComponent
      bounced={false}
      disabled={false}
      e2e="defaultButton"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [
            [Function],
          ],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: ",
              [Function],
              ";
  background-color: ",
              [Function],
              ";
  border: none;
  border-radius: ",
              [Function],
              ";
  cursor: ",
              [Function],
              ";
  outline: none;
  transition: all 0.3s ease 0s;
  opacity: ",
              [Function],
              ";
  font-family: ",
              [Function],
              ";
  font-size: ",
              [Function],
              ";
  font-weight: 600;

  &:hover {
    background-color: ",
              [Function],
              ";
    transform: ",
              [Function],
              ";
  }
",
            ],
          },
          "displayName": "styled.button",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="button"
    >
      <button
        className="c0"
        data-e2e="defaultButton"
        disabled={false}
        type="button"
      />
    </StyledComponent>
  </styled.button>
</Button>
`;
